crates/pyprojx/tests/snapshots/check__checks_pyproject_in_explicit_directory.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
    - packages/app
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error[invalid-toml]: unclosed table, expected `]`
 --> packages/app/pyproject.toml:1:9
  |
1 | [project
  |         ^

Found 1 error.

----- stderr -----
