crates/pyprojx/tests/snapshots/check__counts_fixable_problems.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error[byte-order-mark]: file starts with a UTF-8 byte order mark
 --> pyproject.toml:1:1
  |
1 | ﻿[project]
  | ^
  |
  = help: tomllib (used by pip and most build backends) and uv reject it; save the file as UTF-8 without a byte order mark
  = fix: remove the byte order mark (`--fix`)

error[unknown-key]: unknown key `descripton` in `[project]`
 --> pyproject.toml:4:1
  |
4 | descripton = "A demo"
  | ^^^^^^^^^^
  |
  = help: did you mean `description`?
  = fix: rename to `description` (`--fix --unsafe-fixes`)

error[unknown-key]: unknown key `line-lenght` in `[tool.ruff]`
  --> pyproject.toml:11:1
   |
11 | line-lenght = 88
   | ^^^^^^^^^^^
   |
   = help: did you mean `line-length`?
   = note: checked against Ruff 0.16.8, which the project's requirements allow
   = fix: rename to `line-length` (`--fix --unsafe-fixes`)

warning[deprecated-setting]: linter settings at the top level of `[tool.ruff]` are deprecated
  --> pyproject.toml:13:1
   |
13 | select = ["E", "PLR1701", "E5O1"]  # keep
   | ^^^^^^
14 | ignore = [
   | ------ also a linter setting
...
19 | [tool.ruff.isort]
   |            ----- also a linter setting
   |
   = help: move them to `[tool.ruff.lint]`, such as `[tool.ruff.lint] select = [...]`
   = note: checked against Ruff 0.16.8, which the project's requirements allow
   = fix: move them under `lint` (`--fix`)

warning[deprecated-setting]: Ruff remaps the rule code `PLR1701` to `SIM101`
  --> pyproject.toml:13:16
   |
13 | select = ["E", "PLR1701", "E5O1"]  # keep
   |                ^^^^^^^^^
   |
   = help: use `SIM101`
   = note: checked against Ruff 0.16.8, which the project's requirements allow
   = fix: replace with `SIM101` (`--fix`)

error[invalid-value]: unknown rule selector `E5O1`
  --> pyproject.toml:13:27
   |
13 | select = ["E", "PLR1701", "E5O1"]  # keep
   |                           ^^^^^^
   |
   = help: did you mean `E501`?
   = note: checked against Ruff 0.16.8, which the project's requirements allow
   = fix: replace with `E501` (`--fix --unsafe-fixes`)

warning[ineffective-setting]: Ruff removed the rule `ANN101` in 0.8.0, so this has no effect
  --> pyproject.toml:15:3
   |
15 |   "ANN101",  # removed
   |   ^^^^^^^^
   |
   = help: remove it
   = note: checked against Ruff 0.16.8, which the project's requirements allow
   = fix: remove `ANN101` (`--fix`)

warning[deprecated-setting]: `tool.ty.analysis.strict-literal-narrowing` is deprecated since ty 0.0.63
  --> pyproject.toml:23:1
   |
23 | strict-literal-narrowing = true
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `strict-equality-semantics`, the option's new name
   = note: checked against ty 0.0.83, which the project's requirements allow
   = fix: rename to `strict-equality-semantics` (`--fix`)

warning[invalid-value]: unknown rule `unresolved-imprt`
  --> pyproject.toml:26:1
   |
26 | unresolved-imprt = "error"
   | ^^^^^^^^^^^^^^^^
   |
   = help: did you mean `unresolved-import`?
   = note: checked against ty 0.0.83, which the project's requirements allow
   = fix: rename to `unresolved-import` (`--fix --unsafe-fixes`)

error[invalid-value]: undefined index `internl`
  --> pyproject.toml:32:18
   |
32 | idna = { index = "internl" }
   |                  ^^^^^^^^^
   |
   = help: did you mean `internal`? uv fails when a source names an index that `[[tool.uv.index]]` does not declare
   = note: checked against uv 0.9.0 to [latest], which `tool.uv.required-version` allows
   = fix: replace with `internal` (`--fix --unsafe-fixes`)

Found 5 errors and 5 warnings.
5 problems are fixable with `--fix` (5 more with `--unsafe-fixes`).

----- stderr -----
