crates/pyprojx/tests/snapshots/check__diff_passes_when_nothing_is_fixable.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
    - "--diff"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
No fixes available.
