crates/pyprojx/tests/snapshots/check__empty_file_passes.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----
