crates/pyprojx/tests/snapshots/check__fixes_problems_unsafely_on_request.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
    - "--fix"
    - "--unsafe-fixes"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Fixed 10 problems.
All checks passed!

----- stderr -----
